--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/dj/.local/share/virtualenvs/EasyListen-dltVN6gV/bin/python"
+    "python.pythonPath": "C:\\Users\\dj\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
